# todo-with-htmx-actix-leptos-sqlx

./: Cargo.toml  Dockerfile  README.md  docker-compose.yml  input.css  tailwind.config.js
migrations/: 20230814234813_create_table_tasks.sql
src/: main.rs
src/components/todo/: form_create_new_task.rs  h1_title.rs  h2_subtitle.rs  li_task.rs  mod.rs  ul_tasks_list.rs
src/controller/: controller_task.rs  mod.rs
src/database/: mod.rs  postgres_pool.rs
src/entities/: entity_task.rs  mod.rs
src/error/: app_error.rs
src/model/: mod.rs  model_task.rs
src/repository/: mod.rs  repository_tasks.rs
src/router/: todo.rs
src/services/: mod.rs
src/services/sanitation/: mod.rs  sanitize_task.rs
src/utils/adapters/: map_app_error_to_actix_response.rs  map_sqlx_to_app_error.rs  mod.rs
src/view/: mod.rs  view_task.rs
static/js/: error_handler.js
static/styles/: output.css
