[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.2"
actix-web = "4.3.1"
async-trait = "0.1.73"
leptos = "0.4.8"
sanitizer = "0.1.6"
serde = "1.0.183"
sqlx = {version = "0.7.1", features = [
  "postgres",
  "migrate",
  "runtime-tokio-rustls",
  "macros",
  "chrono",
  "time",
]}
tokio = {version = "1.31.0", features = [
  "macros", 
  "rt-multi-thread"
]}
